--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Conversor de monedas Nacional</h1>
-    <div class="container">
+    <div class="template">
         <div class="form-group">
             <h2>Pesos CLP</h2>
             <label for="monto">Ingrese el monto en CLP:</label>
@@ -25,16 +25,6 @@
                 <option>bitcoin</option>
                 <option>uf</option>
                 <option>dolar</option>
-                <option>dolar_intercambio</option>
-                <option>euro</option>
-                <option>ipc</option>
-                <option>utm</option>
-                <option>imacec</option>
-                <option>ivp</option>
-                <option>libra_cobre</option>
-                <option>tpm</option>
-                <option>tasa_desempleo</option>
-                
             </select>
         </div>
         <button type="button" class="btn btn-primary" onclick="renderGrafica()">Buscar</button>
