--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
         <button type="button" class="btn btn-primary" onclick="renderGrafica()">Buscar</button>
         <p>Resultado:</p>
+        <span id="error"></span>
     </div>
         <h1>Gráfico</h1>
         <div class="grafica">
